# pytest-jira-zephyr-reporter

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
.github/workflows/: cicd-2-publish.yaml  stage-1-commit.yaml
docs/adr/assets/ADR-003/examples/python/: main.py  requirements.txt
pytest_jira_zephyr_reporter/: __init__.py  client.py  config.py  hooks.py  models.py  reporter.py
scripts/githooks/: check-english-usage.sh  check-file-format.sh  check-markdown-format.sh  check-terraform-format.sh  scan-secrets.sh
scripts/reports/: create-lines-of-code-report.sh  create-sbom-report.sh
